appId: com.apple.Preferences
---
# Add subscribed calendar (Japanese holidays)
- tapOn:
    id: ADD_ACCOUNT
- extendedWaitUntil:
    visible:
      id: "showAccountTypeList://"
- tapOn:
    id: "showAccountTypeList://"
- tapOn:
    id: "showAccountTypeList://"
    optional: true
- tapOn:
    id: "showAccountTypeList://"
    optional: true
- extendedWaitUntil:
    visible: ${MAESTRO_L_ADD_OTHER_ACCOUNT}
    timeout: 10000
- tapOn: ${MAESTRO_L_ADD_OTHER_ACCOUNT}
- tapOn: ${MAESTRO_L_SUBSCRIBED_CALENDAR}
- tapOn:
    id: HOST
- inputText: webcal://calendars.icloud.com/holidays/jp_ja.ics
- tapOn: ${MAESTRO_L_DONE}
- tapOn:
    text: "OK"
    optional: true
- tapOn:
    text: ${MAESTRO_L_DONE}
    optional: true
